--- a/apps.html
+++ b/apps.html
@@ -147,111 +147,63 @@
         data-gradient-bg="#212121,#484848,#455a64,#1c313a"
       >
         <div class="background-image-holder">
-          <img alt="background" src="img/iphonee.jpg" />
+          <img alt="background" src="img/iphone.jpg" />
         </div>
         <div class="container pos-vertical-center">
           <div class="row">
             <div class="col-md-5">
-              <img alt="Image" src="img/Artboard.png" />
+              <img alt="Image" src="img/Artboard copy.png" />
               <p class="lead">
-                <br />We know how to make your job easier, just make an app
+                <h1 style="font-size: 5rem;"  >Mobile Apps </h1>
               </p>
             </div>
           </div>
         </div>
       </section>
-      <section
-        class="switchable feature-large unpad--bottom imagebg"
-        data-overlay="4"
-      >
+      <section class="imagebg" data-overlay="4">
         <div class="background-image-holder">
-          <img alt="background" src="img/hero-1.jpg" />
+          <img alt="background" src="img/webDev.jpg" />
         </div>
         <div class="container">
-          <div class="row justify-content-around">
-            <div class="col-md-6">
-              <div class="switchable__text">
-                <h2>About us</h2>
-                <p class="lead">
-                <br />
-                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quasi sequi blanditiis sed tempore sit natus fuga totam facere voluptatibus ut suscipit, eum dolor deserunt dolore accusamus tempora laboriosam quae?<br>
-                </p>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 col-12 text-center">
-              <img alt="Image" src="img/newScreen.png" />
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="bg--dark">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <h1>Our Products</h1>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="text-center bg--dark">
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <div class="slider" data-paging="true" data-timing="5000">
-                <ul class="slides">
-                  <li class="col-md-6 col-12">
-                    <div class="project-thumb">
-                      <a href="http://www.nutrigeek.mx/">
-                        <img
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="process-1">
+                <div class="process__item">
+                  <h4>
+                    Company established 2012<br />
+                    4 founding members
+                  </h4>
+                  <p>
+                    Stack is built with customization and ease-of-use at its
+                    core — whether you're a seasoned developer or just starting
+                    out, you'll be making attractive sites faster than any
+                    traditional HTML template.
+                  </p>
+                </div>
+                <div class="process__item">
+                    <img
+                            alt="Image"
+                            class="border--round"
+                            src="img/crypto-2.svg"
+                          />                </div>
+                <div class="process__item">
+                  <h4>
+                    Succsessfully funded through<br />
+                    Bray Investments
+                  </h4>
+                  <p>
+                    Stack is built with customization and ease-of-use at its
+                    core — whether you're a seasoned developer or just starting
+                    out, you'll be making attractive sites faster than any
+                    traditional HTML template.
+                  </p>
+                </div>
+                <div class="process__item">
+                  <img
                           alt="Image"
                           class="border--round"
-                          src="img/nutrigeek.png"
-                        />
-                      </a>
-                      <h4>Nutrigeek</h4>
-                      <span>A healthy lifestyle</span>
-                    </div>
-                  </li>
-                  <li class="col-md-6 col-12">
-                    <div class="project-thumb">
-                      <a href="http://www.nutrigeek.mx/">
-                        <img
-                          alt="Image"
-                          class="border--round"
-                          src="img/nutrigeek.png"
-                        />
-                      </a>
-                      <h4>Nutrigeek</h4>
-                      <span>A healthy lifestyle</span>
-                    </div>
-                  </li>
-                  <li class="col-md-6 col-12">
-                    <div class="project-thumb">
-                      <a href="http://www.nutrigeek.mx/">
-                        <img
-                          alt="Image"
-                          class="border--round"
-                          src="img/nutrigeek.png"
-                        />
-                      </a>
-                      <h4>Nutrigeek</h4>
-                      <span>A healthy lifestyle</span>
-                    </div>
-                  </li>
-                  <li class="col-md-6 col-12">
-                    <div class="project-thumb">
-                      <a href="http://www.nutrigeek.mx/">
-                        <img
-                          alt="Image"
-                          class="border--round"
-                          src="img/nutrigeek.png"
-                        />
-                      </a>
-                      <h4>Nutrigeek</h4>
-                      <span>A healthy lifestyle</span>
-                    </div>
-                  </li>
-                </ul>
+                          src="img/crypto-2.svg"
+                        />                </div>
               </div>
             </div>
           </div>
@@ -259,7 +211,15 @@
       </section>
       <footer class="footer-6 unpad--bottom">
         <div class="container">
-          <div class="row" style="justify-content: space-between;">
+          <div class="row">
+            <div class="col-sm-6 col-md-3">
+              <h6 class="type--uppercase">About Us</h6>
+              <p>
+                Stack is a robust multipurpose HTML template designed with
+                modularity at the core. Easily combine over 200 interface blocks
+                to create websites for any purpose.
+              </p>
+            </div>
             <div class="col-sm-6 col-md-3">
               <h6 class="type--uppercase">Recent Updates</h6>
               <div
@@ -272,7 +232,7 @@
               <h6 class="type--uppercase">Instagram</h6>
               <div
                 class="instafeed instafeed--gapless"
-                data-user-name="moymacias_"
+                data-user-name="mediumrarethemes"
                 data-amount="6"
                 data-grid="3"
               ></div>
