--- a/apps.html
+++ b/apps.html
@@ -45,35 +45,6 @@
   <body data-smooth-scroll-offset="77">
     <div class="nav-container">
       <div class="via-1585083691890" via="via-1585083691890" vio="google.com">
-        <div class="bar bar--sm visible-xs">
-          <div class="container">
-            <div class="row">
-              <div class="col-3 col-md-2">
-                <a href="index.html">
-                  <img
-                    class="logo logo-dark"
-                    alt="logo"
-                    src="img/logo-dark.png"
-                  />
-                  <img
-                    class="logo logo-light"
-                    alt="logo"
-                    src="img/logo-light.png"
-                  />
-                </a>
-              </div>
-              <div class="col-9 col-md-10 text-right">
-                <a
-                  href="#"
-                  class="hamburger-toggle"
-                  data-toggle-class="#menu2;hidden-xs hidden-sm"
-                >
-                  <i class="icon icon--sm stack-interface stack-menu"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
         <nav id="menu2" class="bar bar-2 hidden-xs bg--dark">
           <div class="container">
             <div class="row">
@@ -117,11 +88,6 @@
                         </div>
                       </div>
                     </li>
-                    <li>
-                      <a href="#">
-                        About Us
-                      </a>
-                    </li>
                   </ul>
                 </div>
               </div>
@@ -129,7 +95,7 @@
                 class="col-lg-5 text-right text-left-xs text-left-sm order-lg-3"
               >
                 <div class="bar__module">
-                  <a class="btn btn--sm type--uppercase" href="#">
+                  <a class="btn btn--sm type--uppercase" href="contact.html">
                     <span class="btn__text">
                       Contact
                     </span>
@@ -160,9 +126,9 @@
           </div>
         </div>
       </section>
-      <section class="imagebg" data-overlay="4">
+      <section class="switchable imagebg parallax" data-overlay="4">
         <div class="background-image-holder">
-          <img alt="background" src="img/webDev.jpg" />
+          <img alt="background" src="img/mobiledev.jpg" />
         </div>
         <div class="container">
           <div class="row justify-content-center">
@@ -211,15 +177,7 @@
       </section>
       <footer class="footer-6 unpad--bottom">
         <div class="container">
-          <div class="row">
-            <div class="col-sm-6 col-md-3">
-              <h6 class="type--uppercase">About Us</h6>
-              <p>
-                Stack is a robust multipurpose HTML template designed with
-                modularity at the core. Easily combine over 200 interface blocks
-                to create websites for any purpose.
-              </p>
-            </div>
+          <div class="row" style="justify-content: space-between;">
             <div class="col-sm-6 col-md-3">
               <h6 class="type--uppercase">Recent Updates</h6>
               <div
@@ -232,7 +190,7 @@
               <h6 class="type--uppercase">Instagram</h6>
               <div
                 class="instafeed instafeed--gapless"
-                data-user-name="mediumrarethemes"
+                data-user-name="moymacias_"
                 data-amount="6"
                 data-grid="3"
               ></div>
