--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,249 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="css/bootstrap.css"
+      rel="stylesheet"
+      type="text/css"
+      media="all"
+    />
+    <link
+      href="css/stack-interface.css"
+      rel="stylesheet"
+      type="text/css"
+      media="all"
+    />
+    <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700"
+      rel="stylesheet"
+    />
+  </head>
+  <body data-smooth-scroll-offset="77">
+    <div class="nav-container">
+      <div class="via-1585083691890" via="via-1585083691890" vio="google.com">
+        <nav id="menu2" class="bar bar-2 hidden-xs bg--dark">
+          <div class="container">
+            <div class="row">
+              <div
+                class="col-lg-2 text-center text-left-sm hidden-xs order-lg-2"
+              >
+                <div class="bar__module">
+                  <a href="index.html">
+                    <img
+                      class="logo logo-dark"
+                      alt="logo"
+                      src="img/logo-dark.png"
+                    />
+                    <img
+                      class="logo logo-light"
+                      alt="logo"
+                      src="img/logo-light.png"
+                    />
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-5 order-lg-1">
+                <div class="bar__module">
+                  <ul class="menu-horizontal text-left">
+                    <li class="dropdown">
+                      <span class="dropdown__trigger">
+                        Our Services
+                      </span>
+                      <div class="dropdown__container">
+                        <div class="container">
+                          <div class="row">
+                            <div class="dropdown__content col-lg-2">
+                              <ul class="menu-vertical">
+                                <li><a href="apps.html">Mobile Apps</a></li>
+                              </ul>
+                              <ul class="menu-vertical">
+                                <li><a href="web.html">Web Development</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div
+                class="col-lg-5 text-right text-left-xs text-left-sm order-lg-3"
+              >
+                <div class="bar__module">
+                  <a class="btn btn--sm type--uppercase" href="contact.html">
+                    <span class="btn__text">
+                      Contact
+                    </span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+    <div class="main-container">
+      <section class="switchable imagebg parallax" data-overlay="4">
+        <div class="background-image-holder">
+          <img alt="background" src="img/contact.jpg" />
+        </div>
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="imageblock__content col-lg-6 col-md-4 col-12 pos-right">
+              <div class="map-container">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.872896911966!2d144.9690257159672!3d-37.79301837975606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad64328bc401a11%3A0xba0f243a742656b1!2sRathdowne+St%2C+Victoria!5e0!3m2!1sen!2sau!4v1485815785982"
+                ></iframe>
+              </div>
+            </div>
+            <div class="col-md-6 col-12">
+              <div class="text-block">
+                <p class="lead">
+                  E: <a href="#">moy-10@live.com</a><br />
+                  P: 5560708837
+                </p>
+                <p class="lead">
+                  Give us a call or drop by anytime, we endeavour to answer all
+                  enquiries within 24 hours on business days.
+                </p>
+                <p class="lead">We are open from 9am — 5pm week days.</p>
+              </div>
+              <form
+                class="form-email row mx-0"
+                data-success="Thanks for your enquiry, we'll be in touch shortly."
+                data-error="Please fill in all fields correctly."
+              >
+                <div class="col-md-6 col-12">
+                  <label>Your Name:</label>
+                  <input type="text" name="name" class="validate-required" />
+                </div>
+                <div class="col-md-6 col-12">
+                  <label>Email Address:</label>
+                  <input
+                    type="email"
+                    name="email"
+                    class="validate-required validate-email"
+                  />
+                </div>
+                <div class="col-md-12 col-12">
+                  <label>Message:</label>
+                  <textarea
+                    rows="3"
+                    name="Message"
+                    class="validate-required"
+                  ></textarea>
+                </div>
+                <div class="col-md-5 col-lg-4 col-6">
+                  <button
+                    type="submit"
+                    class="btn btn--primary type--uppercase"
+                  >
+                    Send Enquiry
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="footer-6 unpad--bottom">
+        <div class="container">
+          <div class="row" style="justify-content: space-between;">
+            <div class="col-sm-6 col-md-3">
+              <h6 class="type--uppercase">Recent Updates</h6>
+              <div
+                class="tweets-feed tweets-feed-2"
+                data-feed-name="mrareweb"
+                data-amount="2"
+              ></div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+              <h6 class="type--uppercase">Instagram</h6>
+              <div
+                class="instafeed instafeed--gapless"
+                data-user-name="moymacias_"
+                data-amount="6"
+                data-grid="3"
+              ></div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+              <h6 class="type--uppercase">Newsletter</h6>
+              <form
+                action="//mrare.us8.list-manage.com/subscribe/post?u=77142ece814d3cff52058a51f&amp;id=f300c9cce8"
+                data-success="Thanks for signing up.  Please check your inbox for a confirmation email."
+                data-error="Please provide your email address."
+              >
+                <input
+                  class="validate-required validate-email"
+                  type="text"
+                  name="EMAIL"
+                  placeholder="Email Address"
+                />
+                <button type="submit" class="btn btn--primary type--uppercase">
+                  Subscribe
+                </button>
+                <div
+                  style="position: absolute; left: -5000px"
+                  aria-hidden="true"
+                >
+                  <input
+                    type="text"
+                    name="b_77142ece814d3cff52058a51f_f300c9cce8"
+                    tabindex="-1"
+                    value=""
+                  />
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="footer__lower text-center-xs">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6">
+                <span class="type--fine-print"
+                  >© <span class="update-year"></span> Medium Rare — All Rights
+                  Reserved</span
+                >
+              </div>
+              <div class="col-sm-6 text-right text-center-xs">
+                <ul class="social-list list-inline">
+                  <li>
+                    <a href="#"
+                      ><i class="socicon socicon-google icon icon--xs"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><i class="socicon socicon-twitter icon icon--xs"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><i class="socicon socicon-facebook icon icon--xs"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><i class="socicon socicon-instagram icon icon--xs"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/parallax.js"></script>
+    <script src="js/smooth-scroll.min.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
+</html>
