--- a/index.html
+++ b/index.html
@@ -45,35 +45,6 @@
   <body data-smooth-scroll-offset="77">
     <div class="nav-container">
       <div class="via-1585083691890" via="via-1585083691890" vio="google.com">
-        <div class="bar bar--sm visible-xs">
-          <div class="container">
-            <div class="row">
-              <div class="col-3 col-md-2">
-                <a href="index.html">
-                  <img
-                    class="logo logo-dark"
-                    alt="logo"
-                    src="img/logo-dark.png"
-                  />
-                  <img
-                    class="logo logo-light"
-                    alt="logo"
-                    src="img/logo-light.png"
-                  />
-                </a>
-              </div>
-              <div class="col-9 col-md-10 text-right">
-                <a
-                  href="#"
-                  class="hamburger-toggle"
-                  data-toggle-class="#menu2;hidden-xs hidden-sm"
-                >
-                  <i class="icon icon--sm stack-interface stack-menu"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
         <nav id="menu2" class="bar bar-2 hidden-xs bg--dark">
           <div class="container">
             <div class="row">
@@ -82,16 +53,7 @@
               >
                 <div class="bar__module">
                   <a href="index.html">
-                    <img
-                      class="logo logo-dark"
-                      alt="logo"
-                      src="img/logo-dark.png"
-                    />
-                    <img
-                      class="logo logo-light"
-                      alt="logo"
-                      src="img/logo-light.png"
-                    />
+                    <span>Arctic Studio</span>
                   </a>
                 </div>
               </div>
@@ -117,11 +79,6 @@
                         </div>
                       </div>
                     </li>
-                    <li>
-                      <a href="#">
-                        About Us
-                      </a>
-                    </li>
                   </ul>
                 </div>
               </div>
@@ -129,7 +86,7 @@
                 class="col-lg-5 text-right text-left-xs text-left-sm order-lg-3"
               >
                 <div class="bar__module">
-                  <a class="btn btn--sm type--uppercase" href="#">
+                  <a class="btn btn--sm type--uppercase" href="contact.html">
                     <span class="btn__text">
                       Contact
                     </span>
@@ -201,7 +158,7 @@
                 <ul class="slides">
                   <li class="col-md-6 col-12">
                     <div class="project-thumb">
-                      <a href="http://www.nutrigeek.mx/">
+                      <a href="http://www.nutrigeek.fit">
                         <img
                           alt="Image"
                           class="border--round"
