--- a/index.html
+++ b/index.html
@@ -122,13 +122,16 @@
         data-overlay="4"
       >
         <div class="background-image-holder">
-          <img alt="background" src="img/hero-1.jpg" />
+          <img alt="background" src="img/iphonee.jpg" />
         </div>
         <div class="container">
           <div class="row justify-content-around">
             <div class="col-md-6">
               <div class="switchable__text">
                 <h2>About us</h2>
+                <button type="submit" id="submit">
+                  test
+                </button>
                 <p class="lead">
                 <br />
                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quasi sequi blanditiis sed tempore sit natus fuga totam facere voluptatibus ut suscipit, eum dolor deserunt dolore accusamus tempora laboriosam quae?<br>
@@ -303,6 +306,7 @@
         </div>
       </footer>
     </div>
+    <script src="nose.js"></script>
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/flickity.min.js"></script>
     <script src="js/parallax.js"></script>
